@@ -1238,6 +1238,16 @@ static int _lvchange_properties_check(struct cmd_context *cmd,
 				     int lv_is_named_arg)
 {
 	if (!lv_is_visible(lv)) {
+		/*
+		 * Exceptions where we allow lvchange properties on
+		 * a hidden sub lv.
+		 *
+		 * lv_is_thin_pool_data: e.g. needed when the data sublv
+		 * is a cache lv and we need to change cache properties.
+		 */
+		if (lv_is_thin_pool_data(lv))
+			return 1;
+
 		if (lv_is_named_arg)
 			log_error("Operation not permitted on hidden LV %s.", display_lvname(lv));
 		return 0;
